tests/ui/no_generic.stderr
error[E0277]: the trait bound `NoDebug: debug3::Debug` is not satisfied
   --> tests/ui/no_generic.rs:13:12
    |
13  |       pprint(Triple {
    |  _____------_^
    | |     |
    | |     required by a bound introduced by this call
14  | |         x: 1u8,
15  | |         y: 2u16,
16  | |         z: NoDebug,
17  | |     });
    | |_____^ the trait `debug3::Debug` is not implemented for `NoDebug`
    |
    = help: the following other types implement trait `debug3::Debug`:
              &T
              &mut T
              ()
              (T0, T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11)
              (T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11)
              (T10, T11)
              (T11,)
              (T2, T3, T4, T5, T6, T7, T8, T9, T10, T11)
            and 434 others
note: required because of the requirements on the impl of `debug3::Debug` for `Triple<u8, u16, NoDebug>`
   --> tests/ui/no_generic.rs:3:10
    |
3   | #[derive(Debug)]
    |          ^^^^^
4   | struct Triple<X, Y, Z> {
    |        ^^^^^^^^^^^^^^^
note: required by a bound in `pprint`
   --> src/lib.rs
    |
    | pub fn pprint<T: Debug>(x: T) -> String {
    |                  ^^^^^ required by this bound in `pprint`
    = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
